--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,9 @@
 <% if user_signed_in?%>
     <div>Welcome <%= current_user.email %></div>
-     <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
+    <%= button_to "Sign Out", destroy_user_session_path, method: :delete %> 
 <% else %>
-     <%= button_to "Sign In", new_user_session_path, method: :get%>
+    <%= button_to "Sign In", new_user_session_path, method: :get%>
 <% end %>
 
-<h1> Data Sessions </h1>
-<br/>
-<p>A practical approach towards learning.</p>
+<h1 style="color:blue;text-align:center;"> Data Sessions </h1>
+<p style="text-align:center;">A practical approach towards learning.</p>
